--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=ProtoCentral ads1293 sensor Library
+name=ProtoCentral ADS1293 ECG Library
 version=1.0.0
-author=ProtoCentral
-maintainer=ProtoCentral
-sentence=Library for the ProtoCentral ads1293 sensor
-paragraph=The ads1293 gives three High-resolution digital ECG channels with simultaneous pace output. 
+author=ProtoCentral Electronics <support@protocentral.com>
+maintainer=ProtoCentral Electronics <protocentral.com>
+sentence=Library to read from the ProtoCentral ADS1293 ECG breakout
+paragraph=ADS1293 provides 3-channel ECG support for 3-lead and 5-lead ECG measurement setups. The ADS1293 library provides functions to easily read upto three channels from the ADS1293.
 category=Sensors
 url=https://github.com/Protocentral/protocentral-ads1293-arduino
 architectures=*
